; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_node.c_node_set_dirty.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_node.c_node_set_dirty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.sway_node = type { i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @node_set_dirty(%struct.sway_node* %0) #0 {
  %2 = alloca %struct.sway_node*, align 8
  store %struct.sway_node* %0, %struct.sway_node** %2, align 8
  %3 = load %struct.sway_node*, %struct.sway_node** %2, align 8
  %4 = getelementptr inbounds %struct.sway_node, %struct.sway_node* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %14

8:                                                ; preds = %1
  %9 = load %struct.sway_node*, %struct.sway_node** %2, align 8
  %10 = getelementptr inbounds %struct.sway_node, %struct.sway_node* %9, i32 0, i32 0
  store i32 1, i32* %10, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 4
  %12 = load %struct.sway_node*, %struct.sway_node** %2, align 8
  %13 = call i32 @list_add(i32 %11, %struct.sway_node* %12)
  br label %14

14:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @list_add(i32, %struct.sway_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
